Fix overflowed urls in input tab (bug 866) pre-expand records list if there are a small number of records

--- a/fossbarcode/media/css/containers.css
+++ b/fossbarcode/media/css/containers.css
@@ -65,6 +65,14 @@
     width: 98%;
 }
 
+/* overflow:auto is also an option here, but not fully supported in browsers */ 
+.foss_table table {
+    table-layout: fixed;
+    overflow: hidden;
+    word-break: break-all;
+    word-wrap: break-word;
+}
+
 .foss_table td {
     padding-left: 5px;
     padding-right: 5px;
